# growthlab-experimentation-platform

./: .env.example  .gitignore  README.md  publish_readiness_report.md  pyproject.toml  step5_final_validation_report.md  step5_hardening_report.md  validation_report_step1_step2.md  validation_report_step3_to_step7.md
.github/workflows/: ci.yml
assets/diagrams/: README.md  system_overview.mmd
assets/screenshots/: README.md
configs/experiments/: exp_onboarding_v1.yaml
configs/policies/: growth_default_v1.yaml
configs/scenarios/: README.md  scenario_delayed_effect.yaml  scenario_low_power_noisy.yaml  scenario_segment_only_win.yaml
docs/architecture/: system_overview.md
docs/decisions/: analysis_engine_assumptions.md  decision_engine_assumptions.md  synthetic_dgp_assumptions.md  trust_validation_assumptions.md  ui_reporting_assumptions.md
docs/demo/: demo_checklist.md  demo_script.md  final_readiness_report.md  release_prep.md
docs/specs/: PRD_v1_2.md  data_contracts_and_simulator_spec_v0_4.md  experiment_config_schema_v0_2.md  metric_definition_schema_v0_3.md  policy_engine_config_schema_v0_3.md  repo_architecture_and_implementation_plan_v0_1.md
reports/demo/: manifest.json
reports/validation/: validation_pack.json  validation_pack.md
scripts/: build_demo_artifacts.py  generate_scenario.py  launch_ui.py  run_decision.py  run_experiment.py  run_smoke_tests.py  run_validation_pack.py
src/analysis/: _stats.py
src/benchmark/: __init__.py
src/core/: __init__.py
src/data/: __init__.py
src/decisioning/: __init__.py
src/simulator/: __init__.py
(+249 files in other folders)
